k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  namespace: app3
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: 695251250319.dkr.ecr.us-east-1.amazonaws.com/my-ecr-repo:latest
        ports:
        - containerPort: 80
