k8s/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: app3
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 8081 # ClusterIP Service Port
      targetPort: 80 # Container Port
