k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: app3
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 8081
